Addign env variables for github actions

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,9 +1,9 @@
-name: Go
+name: Build and Release
 
 on:
   push:
     tags:
-      - 'v*.*.*'  # Se activa en los tags que sigan el patrón v1.0.0
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -21,6 +21,9 @@ jobs:
       - name: Build
         run: go build -o passgenie ./cmd/passgenie
 
+      - name: Test
+        run: go test -v ./...
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -28,14 +31,17 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
-            Release notes for version ${{ github.ref }}
+            Changes in this release:
+            - Build and release of version ${{ github.ref }}
           draft: false
           prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
 
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: passgenie
+          asset_path: ./passgenie
           asset_name: passgenie
           asset_content_type: application/octet-stream
