--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,7 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: |
