--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./passgenie
-          asset_name: passgenie
-          asset_content_type: application/octet-stream
+          asset_path: ./passgenie.zip
+          asset_name: passgenie.zip
+          asset_content_type: application/zip
