--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,47 +3,47 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*' # Push events to matching v*, e.g., v1.0, v20.15.10
+      - 'v*.*.*'  # Coincide con etiquetas como v1.0.0
 
 jobs:
   build:
-    name: Build and Release
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3 # Actualizado a la versión v3
+        uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v3 # Actualizado a la versión v3
+        uses: actions/setup-go@v4
         with:
           go-version: '1.20'
 
-      - name: Build
-        run: go build -o passgenie ./cmd/passgenie
+      - name: Build for Windows
+        run: GOOS=windows GOARCH=amd64 go build -o passgenie.exe ./cmd/passgenie
 
-      - name: Test
-        run: go test -v ./...
+      - name: Build for Linux
+        run: GOOS=linux GOARCH=amd64 go build -o passgenie ./cmd/passgenie
 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
         with:
           tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this release:
-            - Build and release of version ${{ github.ref }}
           draft: false
           prerelease: false
-
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Windows Release Asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./passgenie.exe
+          asset_name: passgenie.exe
+          asset_content_type: application/octet-stream
+
+      - name: Upload Linux Release Asset
+        uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./passgenie
